--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,7 @@
 @media only screen and (min-width: 500px) {
   .about-splash {
     position: absolute;
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%2118502&authkey=%21ADsPQa4as5U4e-0&width=1466&height=890");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1743114190/Splash_vxrjzl_ydbh4j.png");
     left: 0px;
     top: 12vh;
     width: 100vw;
@@ -12,27 +12,24 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    z-index: 99;
+    z-index: 95;
     background-repeat: no-repeat;
-    background-position: top;
     background-size: cover;
   }
   .about-splash .about-splash-items {
     display: flex;
     flex-direction: column;
     position: absolute;
-    right: 4vw;
+    right: 10vw;
     top: 50vh;
-    margin: 0;
-    max-height: 60vh;
     margin: 0;
     z-index: 99;
     width: 35vw;
   }
   .about-splash .about-splash-items .large-title {
-    font-family: "Noto Serif", serif;
+    font-family: "Aref Ruqaa", serif;
     text-transform: uppercase;
-    color: white;
+    color: #B4DE4A;
     font-weight: 700;
     font-size: 4vw;
     text-align: center;
@@ -41,25 +38,45 @@
     z-index: 99;
     text-shadow: 3px 4px 7px rgba(32, 32, 32, 0.8);
   }
-  #aboutpg-item1 {
+  .about-content {
+    position: relative;
+    padding-top: 95vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 1;
     background-color: #F1ECE8;
+  }
+  .about-content .about-content-grid {
+    display: grid;
+    width: 70vw;
+    grid-template-columns: 1fr;
+    align-self: center;
+    justify-self: center;
+    margin-bottom: 10vh;
+  }
+  .about-content .about-content-grid .about-content-item {
+    width: 100%;
+    z-index: 99;
+  }
+  .about-content .about-content-grid #aboutpg-item1 {
     display: grid;
     grid-template-columns: 1fr;
     align-content: center;
     justify-items: center;
-    padding: 2vw;
   }
-  #aboutpg-item1 .aboutpg1container1 {
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 {
     display: flex;
     flex-direction: column;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
     padding-top: 2vw;
   }
-  #aboutpg-item1 .aboutpg1container1 h2 {
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 h2 {
     color: rgb(68, 98, 88);
     font-family: "Roboto";
     font-weight: 900;
@@ -73,7 +90,7 @@
     transition: 1s all ease;
     border-bottom: 3px solid rgb(68, 98, 88);
   }
-  #aboutpg-item1 .aboutpg1container1 p {
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 p {
     text-align: center;
     color: #2C2C2C;
     font-family: "Roboto";
@@ -88,32 +105,87 @@
     padding-top: 3vw;
     padding-bottom: 6vw;
   }
-  #aboutpg-item1 .aboutpg1container1 #about-img-grid {
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 80%;
+  }
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid .about-img-row {
     display: flex;
     flex-direction: row;
-    width: 90%;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
+    height: 40vh;
+    margin-bottom: 1vw;
   }
-  #aboutpg-item1 .aboutpg1container1 #about-img-grid img {
-    height: 19vw;
-    padding: 0.5vw;
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid .about-img-row #about-img1 {
+    height: 100%;
+    width: 33%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0.5vw;
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738574/Anthony_snag_at5ab2.jpg");
+    background-position: center;
   }
-  #aboutpg-item1 .aboutpg1container2 {
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid .about-img-row #about-img2 {
+    height: 100%;
+    width: 33%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0.5vw;
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738573/Snags_ogswkk.jpg");
+    background-position: center;
+  }
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid .about-img-row #about-img3 {
+    height: 100%;
+    width: 33%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0.5vw;
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738572/dogs_in_truck_ahokbb.png");
+    background-position: center;
+  }
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid .about-img-row #about-img4 {
+    height: 100%;
+    width: 33%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0.5vw;
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738570/arborist2_yhdtlw.jpg");
+    background-position: center;
+  }
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid .about-img-row #about-img5 {
+    height: 100%;
+    width: 33%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0.5vw;
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166937/arborist1_a7j9lz.jpg");
+    background-position: center;
+  }
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container1 #about-img-grid .about-img-row #about-img6 {
+    height: 100%;
+    width: 33%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0.5vw;
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738569/Anthony_Pruning_mobile_ukpi7l.png");
+    background-position: center;
+  }
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container2 {
     display: flex;
     flex-direction: row;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 50vh;
     margin-top: 1vw;
   }
-  #aboutpg-item1 .aboutpg1container2 img {
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container2 img {
     height: 100%;
   }
-  #aboutpg-item1 .aboutpg1container2 p {
+  .about-content .about-content-grid #aboutpg-item1 .aboutpg1container2 p {
     text-align: left;
     color: #2C2C2C;
     font-family: "Roboto";
@@ -126,15 +198,28 @@
     margin: 0;
     padding: 10%;
   }
-  #aboutpg-item2 {
-    background-color: #F1ECE8;
+  .about-content .about-content-grid #aboutpg-item2 {
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166649/Bg1_bgnkif.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
     display: grid;
     grid-template-columns: 1fr;
     align-content: center;
     justify-items: center;
-    height: 150vh;
+    height: 90vh;
+    margin-top: 1vw;
   }
-  #aboutpg-item2 h2 {
+  .about-content .about-content-grid #aboutpg-item2 #ethosbox {
+    padding: 2vw;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: center;
+    justify-items: center;
+  }
+  .about-content .about-content-grid #aboutpg-item2 #ethosbox h2 {
     color: rgb(68, 98, 88);
     font-family: "Roboto";
     font-weight: 900;
@@ -142,13 +227,13 @@
     text-align: center;
     font-variant: all-small-caps;
     height: 12vh;
-    width: 15vw;
+    width: 18vw;
     padding-top: 3vh;
     margin: 0;
     transition: 1s all ease;
     border-bottom: 3px solid rgb(68, 98, 88);
   }
-  #aboutpg-item2 p {
+  .about-content .about-content-grid #aboutpg-item2 #ethosbox p {
     text-align: center;
     color: #2C2C2C;
     font-family: "Roboto";
@@ -163,15 +248,17 @@
     padding-top: 3vw;
     padding-bottom: 6vw;
   }
-  #aboutpg-item3 {
-    background-color: #F1ECE8;
+  .about-content .about-content-grid #aboutpg-item3 {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
     display: grid;
     grid-template-columns: 1fr;
     align-content: center;
     justify-items: center;
     height: 150vh;
+    margin-top: 1vw;
   }
-  #aboutpg-item3 h2 {
+  .about-content .about-content-grid #aboutpg-item3 h2 {
     color: rgb(68, 98, 88);
     font-family: "Roboto";
     font-weight: 900;
@@ -179,13 +266,13 @@
     text-align: center;
     font-variant: all-small-caps;
     height: 12vh;
-    width: 30vw;
+    width: 13vw;
     padding-top: 3vh;
     margin: 0;
     transition: 1s all ease;
     border-bottom: 3px solid rgb(68, 98, 88);
   }
-  #aboutpg-item3 p {
+  .about-content .about-content-grid #aboutpg-item3 p {
     text-align: center;
     color: #2C2C2C;
     font-family: "Roboto";
@@ -200,19 +287,58 @@
     padding-top: 3vw;
     padding-bottom: 6vw;
   }
-  #aboutpg-item3 li {
+  .about-content .about-content-grid #aboutpg-item3 ul {
+    color: rgb(68, 98, 88);
+    font-family: "Roboto";
+    font-weight: 600;
+    font-size: 2vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    transition: 1s all ease;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 60%;
+  }
+  .about-content .about-content-grid #aboutpg-item3 ul li {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 5vw;
+  }
+  .about-content .about-content-grid #aboutpg-item3 ul li p {
     text-align: center;
     color: #2C2C2C;
     font-family: "Roboto";
     font-weight: 300;
-    font-size: 1vw;
-    line-height: 140%;
-    text-align: left;
-    width: 60%;
-    height: 70%;
+    font-size: 1.8vw;
+    width: 100%;
+    text-align: center;
     word-wrap: break-word;
     margin: 0;
-    padding-top: 3vw;
-    padding-bottom: 6vw;
+    padding: 0;
+  }
+  .about-content .about-content-grid #aboutpg-item3 ul li h3 {
+    color: rgb(68, 98, 88);
+    font-family: "Roboto";
+    font-weight: 600;
+    font-size: 2vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    transition: 1s all ease;
+    width: 100%;
+  }
+  .about-content .about-content-grid #aboutpg-item4 h2 {
+    color: rgb(68, 98, 88);
+    font-family: "Roboto";
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    height: 12vh;
+    width: 18vw;
+    padding-top: 3vh;
+    margin: 0;
+    transition: 1s all ease;
+    border-bottom: 3px solid rgb(68, 98, 88);
   }
 }/*# sourceMappingURL=about.css.map */
