--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,67 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
 @media only screen and (max-width: 499px) {
-  .overlay-carousel-container {
-    display: grid;
-    opacity: 0;
-    visibility: hidden;
-    grid-template-columns: 1fr;
-    width: 100vw;
-    height: 100vh;
-    top: 0px;
-    left: 0px;
-    position: fixed;
-    z-index: 99;
-    transition: 0.8s all ease;
-  }
-  .overlay-carousel-container .overlay-carousel {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-self: center;
-    align-self: center;
-    width: 90vw;
-    height: 90vh;
-    z-index: 99;
-    background-color: #2C2C2C;
-    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
-  }
-  .overlay-carousel-container .overlay-carousel .x {
-    position: absolute;
-    z-index: 99;
-    display: block;
-    top: 10vh;
-    right: 10vw;
-    width: 2vw;
-    height: 2vw;
-    opacity: 1;
-    transition: 0.4s all ease;
-  }
-  .overlay-carousel-container .overlay-carousel .x:hover {
-    cursor: pointer;
-    opacity: 0.6;
-  }
-  .overlay-carousel-container .overlay-carousel .overlay-carousel-picture {
-    width: 90%;
-    height: 90%;
-    padding: 30px;
-    align-self: center;
-    justify-self: center;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  .dark-overlay {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(68, 98, 88);
-    opacity: 0%;
-    visibility: hidden;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 98;
-    transition: 0.4s all ease;
-  }
   #alternate-nav-header {
     display: flex;
     flex-direction: column;
@@ -75,6 +14,9 @@
     width: 100vw;
     height: 90vh;
     background-color: #2E443E;
+  }
+  #alternate-nav-header #gaia-logo-mobile {
+    width: 35vw;
   }
   #alternate-nav-header #main-nav ul {
     display: grid;
@@ -122,38 +64,60 @@
   #alternate-nav-header #main-nav ul #dropdown #dropdown-content {
     display: none;
   }
-  .content-container {
-    position: relative;
-    background-color: #D0D7CF;
-    width: 100%;
-    padding-top: 12vh;
-    display: grid;
-    align-self: center;
-    justify-self: center;
-    grid-template-columns: 1fr;
-    z-index: 1;
+  #carousel {
+    display: none;
   }
-  .content-container .content-grid {
-    display: grid;
-    background-color: #FFF;
-    width: 100%;
-    grid-template-columns: 1fr;
-    align-self: center;
-    justify-self: center;
-    /* hover */
-    /* overlay styles */
-    /* hover */
+  #carousel #whitetitle {
+    display: none;
   }
-  .content-container .content-grid .content-item {
-    width: 100%;
-    z-index: 99;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  #carousel #greentitle {
+    display: none;
   }
-  .content-container .content-grid .gallery-title {
+  #carousel #carousel-arrows {
+    display: none;
+  }
+  #carousel #carousel-arrows #leftdiv {
+    display: none;
+  }
+  #carousel #carousel-arrows #leftdiv #leftarrow {
+    display: none;
+  }
+  #carousel #carousel-arrows #rightdiv {
+    display: none;
+  }
+  #carousel #carousel-arrows #rightdiv #rightarrow {
+    display: none;
+  }
+  #carousel #carousel-image-container {
+    display: none;
+  }
+  #carousel #carousel-image-container #img-window {
+    display: none;
+  }
+  #carousel #carousel-image-container #img-window #img1 {
+    display: none;
+  }
+  #carousel #carousel-image-container #img-window #img2 {
+    display: none;
+  }
+  #carousel #carousel-image-container #img-window #img3 {
+    display: none;
+  }
+  #carousel #carousel-description {
+    display: none;
+  }
+  #carousel #carousel-description h3 {
+    display: none;
+  }
+  #carousel #carousel-description p {
+    display: none;
+  }
+  .gallery-title {
     background-color: #FFFFFF;
     z-index: 99;
+    padding-top: 10vh;
   }
-  .content-container .content-grid .gallery-title h2 {
+  .gallery-title h2 {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
@@ -162,55 +126,43 @@
     font-variant: all-small-caps;
     color: #2C2C2C;
     color: #2C2C2C;
+    height: 12vh;
+    padding-top: 3vh;
     z-index: 98;
+    margin: 0;
     transition: 1s all ease;
-    margin-top: 50px;
-    margin-bottom: 50px;
   }
-  .content-container .content-grid .image-gallery {
+  .image-gallery {
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    background-color: white;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .content-container .content-grid .image-gallery .column {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  .content-container .content-grid .image-item img {
-    width: 100%;
-    border-radius: 0px;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
-  }
-  .content-container .content-grid .project-image-gallery {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    width: 80%;
-    height: 90vh;
-    gap: 10px;
+    gap: 1vw;
     background-color: white;
     padding-top: 3vh;
     padding-bottom: 3vw;
-    padding-left: 1vw;
-    padding-right: 1vw;
-    justify-self: center;
+    padding-left: 3vw;
+    padding-right: 3vw;
   }
-  .content-container .content-grid .project-image-gallery .project {
+  .project-image-gallery {
+    display: none;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 60vh;
+    gap: 1vw;
+    background-color: white;
+    padding-top: 3vh;
+    padding-bottom: 3vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
+  }
+  .project-image-gallery .project {
     width: 100%;
   }
-  .content-container .content-grid .project-image-gallery .project img {
+  .project-image-gallery .project img {
     -o-object-fit: cover;
        object-fit: cover;
     width: 100%;
-    height: 25vh;
+    height: 100%;
   }
-  .content-container .content-grid .project-image-gallery .project .project-overlay {
+  .project-image-gallery .project .project-overlay {
     position: relative;
     width: 100%;
     height: 100%;
@@ -223,7 +175,7 @@
     color: #fff;
     font-family: "Roboto";
     font-weight: 400;
-    font-size: 20px;
+    font-size: 0.9vw;
     line-height: 1.7vw;
     color: #FFFFFF;
     z-index: 99;
@@ -233,14 +185,39 @@
     justify-content: center;
     cursor: pointer;
   }
-  .content-container .content-grid .project:hover .project-overlay {
+  /* hover */
+  .project:hover .project-overlay {
     opacity: 1;
   }
-  .content-container .content-grid .image-item {
-    position: relative;
-    cursor: pointer;
+  .image-gallery .column {
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
   }
-  .content-container .content-grid .overlay {
+  .image-item img {
+    width: 100%;
+    border-radius: 0px;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+  }
+  .design-image-item img {
+    width: 100%;
+    border-radius: 0px;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+  }
+  /* overlay styles */
+  .image-item {
+    position: relative;
+  }
+  .design-image-item {
+    position: relative;
+  }
+  .overlay {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -253,7 +230,7 @@
     color: #fff;
     font-family: "Roboto";
     font-weight: 400;
-    font-size: 20px;
+    font-size: 0.9vw;
     line-height: 1.7vw;
     color: #FFFFFF;
     /* center overlay content */
@@ -261,7 +238,8 @@
     align-items: center;
     justify-content: center;
   }
-  .content-container .content-grid .image-item:hover .overlay {
+  /* hover */
+  .image-item:hover .overlay {
     opacity: 1;
   }
 }
@@ -807,9 +785,20 @@
        object-fit: cover;
     box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
   }
+  .content-container .content-grid .design-image-item img {
+    width: 100%;
+    border-radius: 0px;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+  }
   .content-container .content-grid .image-item {
     position: relative;
     cursor: pointer;
+  }
+  .content-container .content-grid .design-image-item {
+    position: relative;
   }
   .content-container .content-grid .overlay {
     position: absolute;
