--- a/css/services.scss
+++ b/css/services.scss
@@ -291,7 +291,7 @@ $GaiaGrey: #2C2C2C;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
+            background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166884/ServicesBanner_fte6du.png");
             #text1{
                 position:absolute;
                 left: 10%;
